<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme.NoActionBar"
    android:background="@drawable/gradient">


    <RelativeLayout
        android:id="@+id/background"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">


        <TextView
            android:id="@+id/app_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_alignBottom="@id/master_login_wrapper"
            android:gravity="start"
            android:layout_marginTop="110dp"
            android:text="@string/welcome_to_ipm"
            android:textSize="30sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/master_login_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/master_password_wrapper"
            android:gravity="center"
            android:layout_centerHorizontal="true">

            <EditText
                android:id="@+id/master_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:ems="10"
                android:hint="@string/login"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/master_password_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:layout_marginBottom="215dp">

            <EditText
                android:id="@+id/master_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-180dp"
            android:layout_below="@+id/master_password_wrapper">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/face_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:clickable="true"
                android:focusable="true"
                android:backgroundTint="@color/colorPrimary"
                app:srcCompat="@drawable/ic_face" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/finger_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:clickable="true"
                android:focusable="true"
                android:backgroundTint="@color/colorPrimary"
                app:srcCompat="@drawable/ic_fingerprint" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/master_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:clickable="true"
                android:focusable="true"
                app:backgroundTint="@color/colorPrimaryLight"
                app:srcCompat="@drawable/ic_arrow" />
        </LinearLayout>



        <TextView
            android:id="@+id/btn_create_account"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="50dp"
            android:text=""
            android:textSize="15sp" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>